# rust-axum-web-lab

./: Cargo.toml  README.md
src/: main.rs  server.rs
templates/: index.html
templates/languages/: base.html  index.html
