[package]
name = "rust_axum_web_lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["with-axum"] }
axum = { version = "0.6.20", features = ["tracing"] }
hyper = { version = "0.14.27", features = ["server"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.3", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

